<resources>
    <string name="app_name">Gold Trap</string>
    <string name="signin_other_error">There was an issue with sign-in, please try again later.</string>
    <string name="loading">loading&#8230;</string>
    <string name="play">Play</string>
    <string name="quick_play">Quick Play</string>
    <string name="heart">Heart</string>
    <string name="multi_player">Multi Player</string>
    <string name="episodes">Episodes</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_quick_play">QuickPlayActivity</string>
    <string name="points">Points: %d</string>
    <string name="your_turn">Your Turn</string>
    <string name="game_over">Game Over</string>
    <string name="opponents_turn">Their Turn</string>
    <string name="extra_chance">+1</string>
    <string name="flip">Flip</string>
    <string name="skip">Skip</string>
    <string name="tasks">Tasks</string>
    <string name="share_with_others">Checkout my score at Gold Trap. Get it at http://bit.ly/gold-trap</string>
    <string name="google_play_services_error">Google Play Services Error</string>

    <string name="won">You Won!</string>
    <string name="lost">You Lost</string>
    <string name="draw">It\'s a Draw!</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="incomplete_tasks">Incomplete Tasks</string>

    <!-- Menu Items -->
    <string name="play_game">Play</string>
    <string name="quick_play_game">Quick Play</string>
    <string name="multi_player_game">Multi Player</string>
    <string name="store">Shop \'o Rama</string>
    <string name="checkout">Checkout %1$s</string>
    <string name="leaderboards">LeaderBoards</string>
    <string name="achievements">Achievements</string>
    <string name="share">Share</string>

    <!-- Multi Player Menu Items -->
    <string name="start_match">New Match</string>
    <string name="auto_match">Auto Match</string>
    <string name="in_progress_matches">In Progress Matches</string>


    <string name="replay">Replay</string>
    <string name="invite">Challenge</string>
    <string name="next">Next</string>

    <string name="invitation_title">Challenge your friends</string>
    <string name="invitation_message">You should try this game. It\'s super fun!</string>
    <string name="invitation_cta">Install!</string>
    <string name="sent_invitations_fmt" formatted="false">Sent %d invitations</string>
    <string name="send_failed">Sending invitations failed</string>
    <string name="title_activity_multi_player">Multi Player</string>
    <string name="action_settings">Settings</string>

    <string name="sign_in_successful">Sign in successful</string>

    <string name="title_activity_play">Play</string>
    <string name="title_activity_tutorial">Tutorial</string>

    <string name="no_internet">Please enable your internet</string>
    <string name="settings">Settings</string>
    <string name="level">Level %d</string>

    <!-- Buyables -->
    <string name="flip_name">Get Flips</string>
    <string name="flip_desc">Flips will help you to interchange the cells occupied by you and the opponent.</string>

    <string name="plus_one_name">Get +1</string>
    <string name="plus_one_desc">+1s will help you to get an extra chance.</string>

    <string name="skip_name">Get Skips</string>
    <string name="skip_desc">Skips will help you to skip a turn.</string>

    <string name="unlock_all_name">Unlock</string>
    <string name="unlock_all_desc">Unlock all levels.</string>

    <string name="donate_name">Donate</string>
    <string name="donate_desc">If you like this game, please donate to help me maintain this game :).</string>

    <string name="buy_item">Buy %s</string>
    <string name="buy_item_desc">Buy %s in Google Play</string>
    <string name="buy_button">Buy</string>
    <string name="trade_points">Trade</string>
    <string name="trade_points_desc">Trade for %d points</string>
    <string name="trade_button">Trade</string>
    <string name="exchange_goodie_title">Exchange with Goodies</string>
    <string name="exchange_goodie">%s</string>
    <string name="exchange_goodie_desc">Exchange for %1$d %2$s</string>
    <string name="exchange_button">Exchange</string>

    <string name="one_k">Gold Coins</string>
    <string name="two_k">Gold Nuggets</string>
    <string name="five_k">Gold Bars</string>
    <string name="diamonds">Diamonds</string>

    <string name="game_was_cancelled">This game was canceled!</string>
    <string name="game_is_expired">This game is expired.  So sad!</string>
    <string name="auto_matching">We\'re still waiting for an automatch partner.</string>
    <string name="transaction_successful">Transaction Successful</string>
    <string name="mute">Mute</string>
    <string name="un_mute">Un-mute</string>
    <string name="stay_tuned">Stay Tuned for the full version of the App!</string>
    <string name="score">Score</string>
    <string name="sound">Sound</string>
    <string name="star">Star</string>
    <string name="connect_to_google_play_games">Please connect to Google Play Games for playing multi-player games!</string>
    <string name="connect_to_google_play_games_menu">Please connect to Google Play Games</string>
    <string name="help">Help</string>
    <string name="goodie">Goodie</string>
    <string name="title_activity_points">Points</string>
    <string name="points_value_name">%1$d Points</string>
    <string name="goodie_value_name">%1$d %2$s</string>

</resources>
