<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:board="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@drawable/fragment_bg"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.asb.goldtrap.fragments.multiplayer.MultiPlayerGameFragment">

    <RelativeLayout
        android:id="@+id/game_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/score_board"
            style="@android:style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/points">
        </TextView>

        <ToggleButton
            android:id="@+id/sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textOff="@string/un_mute"
            android:textOn="@string/mute"/>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/game_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cheat_options"
        android:layout_below="@+id/game_status"
        android:layout_centerHorizontal="true"
        android:elevation="2dp"
        android:padding="@dimen/dot_board_padding">

        <com.asb.goldtrap.views.GameCompleteDotBoard
            android:id="@+id/game_complete_dot_board"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            board:board_style="square"/>

        <com.asb.goldtrap.views.DotBoard
            android:id="@+id/dot_board"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            board:board_style="square"/>

    </FrameLayout>


    <LinearLayout
        android:id="@+id/cheat_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/extra_chance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/extra_chance"/>

        <Button
            android:id="@+id/flip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/flip"/>

        <Button
            android:id="@+id/skip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/skip"/>
    </LinearLayout>

</RelativeLayout>