<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.asb.goldtrap.fragments.shoporama.CheckoutFragment">

    <TextView
        android:id="@+id/header"
        style="@android:style/TextAppearance.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/checkout"/>

    <LinearLayout
        android:id="@+id/exchange"
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/buy_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/buy_item"
                app:layout_widthPercent="70%"/>

            <Button
                android:id="@+id/buy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/buy_item"
                android:layout_toRightOf="@+id/buy_item"
                android:text="@string/buy_button"
                app:layout_widthPercent="30%"/>
        </android.support.percent.PercentRelativeLayout>

        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/trade_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/trade_points"
                app:layout_widthPercent="70%"/>

            <Button
                android:id="@+id/trade_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/trade_points"
                android:layout_toRightOf="@+id/trade_points"
                android:text="@string/trade_button"
                app:layout_widthPercent="30%"/>
        </android.support.percent.PercentRelativeLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/levels"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/exchange"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        android:scrollbars="vertical"/>

</RelativeLayout>
