<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.asb.goldtrap.fragments.launch.HomeFragment">

    <FrameLayout
        android:id="@+id/game_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/dot_board_padding">

        <com.asb.goldtrap.views.DotBoard
            android:id="@+id/dot_board"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/game_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/game_layout"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/quick_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/play"
            android:layout_toLeftOf="@+id/play"
            android:layout_toStartOf="@+id/play"
            android:text="@string/quick_play"/>

        <Button
            android:id="@+id/multiplayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/play"
            android:layout_toEndOf="@+id/play"
            android:layout_toRightOf="@+id/play"
            android:text="@string/multiplayer"/>

        <Button
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/play"/>

        <FrameLayout
            android:id="@+id/sign_in_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/play"
            android:layout_toLeftOf="@+id/play"
            android:layout_toStartOf="@+id/play">

            <Button
                android:id="@+id/sign_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </FrameLayout>

        <Button
            android:id="@+id/heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/play"
            android:layout_toEndOf="@+id/play"
            android:layout_toRightOf="@+id/play"
            android:text="@string/heart"/>

    </RelativeLayout>

</RelativeLayout>
