<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/card_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/checkout_card_margin"
    android:layout_marginStart="@dimen/checkout_card_margin"
    card_view:cardBackgroundColor="@color/md_grey_100"
    card_view:cardCornerRadius="@dimen/card_corner_radius"
    card_view:cardElevation="@dimen/card_elevation"
    card_view:cardPreventCornerOverlap="false"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/goodie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/checkout_image"
                android:layout_width="@dimen/checkout_size"
                android:layout_height="@dimen/checkout_size"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/checkout_image_margin"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/checkout_image_padding"
                android:scaleType="fitCenter"
                app:layout_widthPercent="20%"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/checkout_image"
                android:layout_toLeftOf="@+id/exchange_button"
                android:layout_toRightOf="@+id/checkout_image"
                android:layout_toStartOf="@+id/exchange_button"
                android:paddingBottom="@dimen/checkout_padding"
                android:paddingTop="@dimen/checkout_padding"
                app:layout_widthPercent="50%">

                <TextView
                    android:id="@+id/goodie_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exchange_goodie"
                    android:textColor="@color/primary_text_dark"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/goodie_exchange_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/goodie_name"
                    android:text="@string/exchange_goodie_desc"
                    android:textColor="@color/secondary_text_dark"
                    android:textSize="13sp"/>
            </RelativeLayout>

            <Button
                android:id="@+id/exchange_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/exchange_button"
                app:layout_widthPercent="30%"/>
        </android.support.percent.PercentRelativeLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>