<RelativeLayout
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/summary_bg"
    tools:context="com.asb.goldtrap.fragments.postgame.SummaryFragment">

    <RelativeLayout
        android:id="@+id/result_block"
        android:layout_width="match_parent"
        android:layout_height="@dimen/play_appbar_height"
        android:background="?colorPrimary">

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:text="@string/app_name"
            android:textColor="@color/primary_text"
            android:textSize="42sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ad_view"
        android:layout_margin="@dimen/spacing_normal"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/padding_normal"
        android:paddingTop="@dimen/play_content_padding_top"
        android:scrollbarStyle="outsideOverlay">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/actions"
            android:layout_margin="@dimen/summary_card_margin"
            card_view:cardCornerRadius="@dimen/card_corner_radius"
            card_view:cardElevation="@dimen/card_elevation"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_normal"
                android:scaleType="centerCrop"/>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/invite"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invite"/>

                <Button
                    android:id="@+id/next"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/replay"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/replay"/>

                <Button
                    android:id="@+id/share"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <com.google.android.gms.ads.NativeExpressAdView
        android:id="@+id/ad_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="@string/ads_rect"
        ads:adUnitId="@string/wide_rect">
    </com.google.android.gms.ads.NativeExpressAdView>

</RelativeLayout>
