<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:background="@drawable/fragment_bg"
                tools:context="com.asb.goldtrap.fragments.postgame.ScoreFragment">

    <TextView
        android:id="@+id/result"
        style="@android:style/TextAppearance.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/won"/>

    <ImageView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_below="@+id/result"
        android:background="#1FFFFFFF"
        android:color="#1FFFFFFF"/>

    <TextView
        android:id="@+id/points"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/points"/>

    <ImageView
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_below="@+id/points"
        android:background="#1FFFFFFF"
        android:color="#1FFFFFFF"/>

    <TextView
        android:id="@+id/tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider2"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/completed_tasks"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/task_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/action"
        android:layout_below="@+id/tasks"
        android:scrollbars="vertical"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/action"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="@dimen/fab_padding"
        android:src="@drawable/play"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        app:layout_anchorGravity="bottom|right|end"
        app:pressedTranslationZ="12dp"/>

</RelativeLayout>
